--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,6 +26,8 @@
 			<h1>Michael Bernstein</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 			<button id="colorBtn" class="btn btn-primary btn-lg">Colors!</button>
+			<button id="musicBtn" class="btn btn-primary btn-lg">Music!</button>
+			<span id="song"></span>
 		</div>
 
 		<h4>Projects</h4>
